# natnet_ros_cpp

./: .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  install_sdk.sh  package.xml
.github/workflows/: main.yaml
L2S-lab/natnet_ros_cpp/: README.md
L2S-lab/natnet_ros_cpp/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
L2S-lab/natnet_ros_cpp/ghrs-data/snapshots/: 2024-01-22_083859_top_paths_snapshot.csv  2024-01-22_083859_views_clones_series_fragment.csv  2024-01-22_230822_top_referrers_snapshot.csv  2024-01-22_230822_views_clones_series_fragment.csv  2024-01-23_230813_top_paths_snapshot.csv  2024-01-23_230813_top_referrers_snapshot.csv  2024-01-23_230813_views_clones_series_fragment.csv  2024-01-24_230806_top_paths_snapshot.csv  2024-01-24_230806_top_referrers_snapshot.csv  2024-01-24_230806_views_clones_series_fragment.csv  2024-01-25_230810_top_paths_snapshot.csv  2024-01-25_230810_top_referrers_snapshot.csv  2024-01-25_230810_views_clones_series_fragment.csv  2024-01-26_230810_top_paths_snapshot.csv  2024-01-26_230810_top_referrers_snapshot.csv  2024-01-26_230810_views_clones_series_fragment.csv  2024-01-27_230809_top_paths_snapshot.csv  2024-01-27_230809_top_referrers_snapshot.csv  2024-01-27_230809_views_clones_series_fragment.csv  2024-01-28_230902_top_paths_snapshot.csv  2024-01-28_230902_top_referrers_snapshot.csv  2024-01-28_230902_views_clones_series_fragment.csv  2024-01-29_230844_top_paths_snapshot.csv  2024-01-29_230844_top_referrers_snapshot.csv  2024-01-29_230844_views_clones_series_fragment.csv  2024-01-30_230759_top_paths_snapshot.csv  2024-01-30_230759_top_referrers_snapshot.csv  2024-01-30_230759_views_clones_series_fragment.csv  2024-01-31_230821_top_paths_snapshot.csv  2024-01-31_230821_top_referrers_snapshot.csv  2024-01-31_230821_views_clones_series_fragment.csv  2024-02-01_230809_top_paths_snapshot.csv  2024-02-01_230809_top_referrers_snapshot.csv  2024-02-01_230809_views_clones_series_fragment.csv  2024-02-02_230723_top_paths_snapshot.csv  2024-02-02_230723_top_referrers_snapshot.csv  2024-02-02_230723_views_clones_series_fragment.csv  2024-02-03_230821_top_paths_snapshot.csv  2024-02-03_230821_top_referrers_snapshot.csv  2024-02-03_230821_views_clones_series_fragment.csv  (+776 more)
L2S-lab/natnet_ros_cpp/latest-report/: report.html  report.md  report_for_pdf.html
config/: initiate.yaml
include/natnet_ros_cpp/: internal.h  nn_filter.h  set_param.h
launch/: gui_natnet_ros.launch  natnet_ros.launch
scripts/: helper_node.py
src/: internal.cpp  marker_poses_server.cpp  natnet_ros.cpp  nn_filter.cpp
srv/: MarkerPoses.srv
ui/: helper.ui  ui.py
